--- a/app/src/main/res/layout/fragment_settings_user_accounts.xml
+++ b/app/src/main/res/layout/fragment_settings_user_accounts.xml
@@ -1,62 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/llUserLeft"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/listview"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <TextView
+        style="@style/bigText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="User Accounts" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="User Accounts" />
+    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Bike Owner" />
+        <LinearLayout
+            android:id="@+id/llUserLeft"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/lvUserTable"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/btEditUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit User" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Bike Owner" />
 
-        <Button
-            android:id="@+id/btAddUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add User" />
+            <Button
+                android:id="@+id/btEditUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit User" />
 
-        <Button
-            android:id="@+id/btRemoveUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Remove User" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/btAddUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add User" />
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/llUserLeft"
-        app:layout_constraintTop_toTopOf="parent">
+            <Button
+                android:id="@+id/btRemoveUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remove User" />
+        </LinearLayout>
 
+        <ListView
+            android:id="@+id/lvUserTable"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/llUserLeft"
+            app:layout_constraintTop_toTopOf="parent">
+        </ListView>
 
-    </ListView>
+    </android.support.constraint.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
