--- a/app/src/main/res/layout/fragment_settings_anti_theft.xml
+++ b/app/src/main/res/layout/fragment_settings_anti_theft.xml
@@ -9,10 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        style="@style/bigText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        style="@style/titleText"
         android:text="Anti Theft"/>
 
     <LinearLayout
