--- a/app/src/main/res/layout/fragment_settings_automation.xml
+++ b/app/src/main/res/layout/fragment_settings_automation.xml
@@ -10,15 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        style="@style/bigText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Automation"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        style="@style/titleText"
+        android:text="Automation"/>
 
     <LinearLayout
         android:layout_width="match_parent"
