--- a/app/src/main/res/layout/fragment_settings_regional.xml
+++ b/app/src/main/res/layout/fragment_settings_regional.xml
@@ -9,10 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        style="@style/bigText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        style="@style/titleText"
         android:text="Regional"/>
 
     <LinearLayout
