--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -88,6 +88,7 @@
             android:src="@android:drawable/ic_dialog_map"/>
 
         <ImageButton
+            android:id="@+id/btHistory"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
