--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,14 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="titleText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:paddingBottom">16dp</item>
+    </style>
+
     <style name="captionOnly">
         <item name="android:background">@null</item>
         <item name="android:clickable">false</item>
